Updated CI/CD to not run on non-game-related pushes

--- a/.github/workflows/export-game.yml
+++ b/.github/workflows/export-game.yml
@@ -4,7 +4,11 @@ on:
   push:
     branches:
       - main
+    paths:
+      - game/**/*
   pull_request:
+    paths:
+      - game/**/*
   workflow_dispatch:
 
 env:
